--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "keeper-app-part-1-starting",
+  "name": "IntroExtro App",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
@@ -7,7 +7,8 @@
   "dependencies": {
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "rodal": "^1.8.3"
   },
   "devDependencies": {
     "typescript": "3.3.3"
